# efast

./: .gitignore  auth_openeo.py  efast_interactive.ipynb  launch_notebook.sh  pyproject.toml  requirements.txt  run_efast.py  run_efast_site.py  run_interactive_workflow.py  setup.sh  test_notebook.py
efast/: __init__.py  efast.py  interactive_helpers.py  s2_processing.py  s3_openeo_download.py  s3_processing.py
