[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "efast"
authors = [
    {name = "sa", email = "smth@email.com"},
]
description = "Implementation of the EFAST Sentinel-2/3 fusion algorithm"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10, < 3.14"
dependencies = [
    "python-dateutil",
    "numpy",
    "pandas",
    "rasterio",
    "scipy",
    "tqdm",
    "pyproj",
    "shapely",
    "astropy",
    "pystac-client>=0.7.0",
    "snap-graph@git+https://github.com/DHI-GRAS/snap-graph",
    "creodias-finder@git+https://github.com/DHI-GRAS/creodias-finder",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["efast"]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
